Bug 154328 - Stale favorites item with wrong url not deletable using right-click
Summary: Stale favorites item with wrong url not deletable using right-click
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-19 16:26 UTC by Bart Cerneels
Modified: 2007-12-21 16:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Cerneels 2007-12-19 16:26:06 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

After changing the prefix of my kde4 install one item in the favorites had a wrong url. The .desktop file didn't exist anymore.
Normally favorites items can be removed by right-clicking > "Remove from Favorites", but that didn't work for the stale item. So without manually editing $KDEHOME/share/config/kickoffrc the stale item can not be removed.
I guess a small logic change in the right-click handling will fix this.

Bart
Comment 1 David Broome 2007-12-20 19:23:24 UTC
I can confirm this as well.
Comment 2 Jason Stubbs 2007-12-21 16:57:49 UTC
SVN commit 751296 by jstubbs:

Assign the passed url to items that don't exist rather than assigning a null
string so that the items are removable.

BUG: 154328


 M  +10 -3     models.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751296