Assign the passed url to items that don't exist rather than assigning a null string so that the items are removable.

BUG: 154328

svn path=/trunk/KDE/kdebase/workspace/; revision=751296